--- a/package.json
+++ b/package.json
@@ -40,5 +40,14 @@
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.84",
+    "@mui/material": "^5.13.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
