--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.84",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
