--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "^5.13.6",
     "@mui/x-date-pickers": "^6.9.0",
+    "@mui/x-date-pickers-pro": "^6.9.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
