--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/x-date-pickers": "^6.9.0",
     "@mui/x-date-pickers-pro": "^6.9.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
