--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@mui/x-date-pickers-pro": "^6.9.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
+    "link": "^1.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0"
   }
 }
