--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "@mui/material": "^5.13.6",
     "@mui/x-date-pickers": "^6.9.0",
     "@mui/x-date-pickers-pro": "^6.9.0",
+    "css-transition": "^0.0.3",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "link": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-loading-skeleton": "^3.3.1",
+    "react-router-dom": "^6.14.0",
+    "react-transition-group": "^4.4.5"
   }
 }
