--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://DenBern.github.io/NASAImagesLibrary",
   "scripts": {
     "start": "cross-env SERVE=true webpack serve",
     "build": "webpack",
     "build-prod": "webpack --mode=production",
-    "clean": "rd /s /q dist"
+    "clean": "rd /s /q dist",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +22,6 @@
   "bugs": {
     "url": "https://github.com/DenBern/NASAImagesLibrary/issues"
   },
-  "homepage": "https://github.com/DenBern/NASAImagesLibrary#readme",
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
@@ -54,6 +56,7 @@
     "css-transition": "^0.0.3",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
+    "gh-pages": "^5.0.0",
     "link": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
