--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gh-pages": "^5.0.0",
     "link": "^1.5.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.14.0",
